Add R script for welfare calcuations and results of paper parameterization to notes

--- a/notes.tex
+++ b/notes.tex
@@ -390,7 +390,13 @@ Leaving the two gift terms on the end intact, I simplify in the same way as in S
 						Utility comparisons (always for high type)
 							\begin{itemize}
 								\item When $e=1$: $\frac{1}{1-d_h}\left\{pT(1+g^*) + (1-p)(W-D(1+g^*))\right\} - \frac{p(1-d_l)(D+T)}{(1-d_l)(1-pT)+(1-p)D}$
+									\begin{itemize}
+										\item \color{red} For the parameterization in the paper, welfare is 7.18; gift is 0.63
+									\end{itemize}
 								\item When $e=0$: $\frac{1}{1-d_h}\left\{pT + (1-p)(W-D)\right\} - p(T+D)$
+									\begin{itemize}
+										\item \color{red} For the parameterization in the paper, welfare is 8; gift is 3
+									\end{itemize}
 								\item When $0<e<1$ under a mediator: $\frac{1}{1-d_h}\left\{pT(1+eg_M) + (1-p)(W-D)\right\} - g_M$
 									\begin{itemize}
 										\item Figure out optimal $g_M$
@@ -400,6 +406,7 @@ Leaving the two gift terms on the end intact, I simplify in the same way as in S
 											\]
 										\item We're assuming $p - e \left( p + T - \de T + W \right) > 0$ (assuming gifts must be non-negative)
 										\item Also $pg - \left(1 - \de \right) \left( T + D \right) \geq 0$ ($e$ version; this is WEAKER than the condition on $e$)
+										\item \color{red} For the parameterization in the paper, welfare is negative for $e=0$ and $e=0.01$, the only values of $e$ that lead to non-negative gifts; gifts range from 52.5 to 218.75
 									\end{itemize}
 							\end{itemize}
 			
